--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "keywords": [
     "NodeJS"
   ],
-
   "author": "LinhBX",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
